--- a/install.txt
+++ b/install.txt
@@ -1,4 +1,4 @@
-echo -e "سورس الصارم"
+echo -e "stern source : "
 echo -n "يتم تثبيت البيثون .." 
 sudo apt-get update -y &>/dev/null
 sudo add-apt-repository ppa:deadsnakes/ppa -y &>/dev/null
@@ -21,5 +21,5 @@ echo -n "يتم تثبيت مكاتب التشغيل .."
 curl -sL https://deb.nodesource.com/setup_12.x | sudo bash - &>/dev/null; sudo apt-get update &>/dev/null; sudo apt install nodejs -y &>/dev/null; sudo npm install -g pm2 &>/dev/null
 echo -e "\rتم التثبيت بنجاح √"
 echo -n "يتم تحميل السورس على السيرفر .." 
-git clone https://github.com/src80/als.git &>/dev/null
+git clone https://github.com/src80/stern.git &>/dev/null
 echo -e "\rتم تحميل السورس على السيرفر الإن قم بملىء الحقول"
